# FEmbed-OSlib

./: .ccsproject  .cproject  .gitignore  .project  CMakeLists.txt  Kconfig  Makefile  Makefile.projbuild  README.md  component.mk  generate_headers.py  library.json  module.yaml  project.yaml  projects.yaml  properties.yaml
RTOS/FreeRTOS/: tasks.c
RTOS/FreeRTOS/CMSIS_RTOS/: cmsis_os.c  cmsis_os.h
RTOS/FreeRTOS/include/: FreeRTOSConfig.config
RTOS/FreeRTOS/portable/GCC/ARM_CM3_MPU/: port.c
RTOS/FreeRTOS/portable/GCC/cortex-m0/: port.c
RTOS/FreeRTOS/portable/GCC/cortex-m3/: port.c
RTOS/FreeRTOS/portable/GCC/cortex-m4/: port.c
RTOS/FreeRTOS/portable/GCC/cortex-m7/: port.c
RTOS/FreeRTOS/portable/MemMang/: heap_4.c
oslib/: osMail.h  osMessage.h  osMutex.cpp  osMutex.h  osRecursiveMutex.h  osSemaphore.h  osSignal.h  osTask.cpp  osTask.h  osTimer.cpp  osTimer.h
port/: FreeRTOSConfig.h  rtos_stub.c
records/FreeRTOS/: Common.yaml
src/: fe_os.h  osMail.h  osMessage.h  osMutex.cpp  osMutex.h  osRecursiveMutex.h  osSemaphore.h  osSignal.h  osTask.cpp  osTask.h  osTimer.cpp  osTimer.h
src/freertos/: tasks.c
src/freertos/include/: FreeRTOS.h  FreeRTOSConfig.config  task.h
src/port/freertos/: FreeRTOSConfig.h  rtos_stub.c
src/port/freertos/ARM_CM4_MPU/: port.c
src/port/freertos/Common/: cmsis_os2.c  rtos_stub.c
src/port/freertos/Common/include/: FreeRTOSConfig.h
src/port/freertos/cortex-m4/: port.c  portmacro.h
src/port/freertos/esp8266/: freertos_hooks.c  impure.c  os_cpu_a.S  panic.c  port.c  xtensa_context.S  xtensa_vectors.S
(+8 files in other folders)
